Fix: prevent from horizontal overflow

--- a/src/sass/_default.sass
+++ b/src/sass/_default.sass
@@ -5,3 +5,4 @@
 body
     margin: 0
     font-family: 'Roboto', sans-serif
+    overflow-x: hidden
